--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html {
   background-color: white;
 }
 .About {
- background-color: rgb(255, 251, 251);
+ background-color: rgb(252, 247, 247);
  
 }
 
@@ -32,7 +32,7 @@ html {
 
 }
 
-.Project {   background-color: rgb(255, 251, 251);
+.Project {   background-color: rgb(252, 247, 247);
   text-align: center;
   height: auto;
 }
@@ -97,6 +97,7 @@ border: 1px solid #ca82f8;
 }
 
 
+
 .About>h1, .Skills>h1, .Project>h1, .Contact>h1{
   margin-top: 3%;
   margin-bottom: 5%;
@@ -104,6 +105,7 @@ border: 1px solid #ca82f8;
 }
 
 .About>h1{
+  padding-top: 4%;
   text-align: center  ;
 }
 
@@ -150,10 +152,10 @@ margin-left: 2%;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(2, 1fr);
   width: 80%;
-  gap:10px;
-  /* margin-top: 2%; */
-  margin: auto;
-}
+  gap:40px;
+   margin: auto;
+ margin-top: 6%;
+  }
 
 .skillsSection>div>img{
   width: 80px;
@@ -162,26 +164,26 @@ margin-left: 2%;
 }
 
 .skillsSection>div>p{
-margin-top: 2px;
+margin-top: 6px;
 color: rgb(125, 124, 124);
 }
 
 .skillsSection>div{
-  width: 130px;
-      height: 120px;
+  width: 140px;
+      height: 140px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
   /* <-------------------------------------------skils end--------------------------------> */
   /* <-------------------------------------------project start--------------------------------> */
 .projectContainer{
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  padding: 18px 8px;
+  padding: 18px 2px;
   font-size: 16px;
   border-radius: 10px;
 }
 .projectContainer>div>img{
-  height: 250px;
-  width: 350px;
+  height: 260px;
+  width: 380px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
@@ -234,15 +236,15 @@ gap: 25px;
 }
 
 .githubActivity{
-  width: 70%;
+  width: 82%;
   margin: auto;
   border-radius: 10px;
-  padding: 18px;
+  padding: 18px 18px 18px   68px;
   border:1.5px solid #ca82f8;
   display: block;
   justify-content: center;
   align-items: center;
-  margin-bottom: 4%;
+  margin-bottom: 8%;
 }
   /* <-------------------------------------------project end--------------------------------> */
 .contactContainer{
