--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -47,3 +47,75 @@ border-bottom: 1px solid #CA82F8;
     height: 60px;
     margin-top: 10px;
 }
+
+
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
+  
+  .topnav a.icon {
+    background: #CA82F8;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+        background-color: white;
+        border-bottom: 1px solid rgb(230, 225, 225);
+    color: white;
+  }
+
+  .active>img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -17px;
+    margin-bottom: -15px;
+  }
+
+  .mobile-container {
+    max-width: 480px;
+    margin: auto;
+    background-color: #555;
+    height: 500px;
+    color: white;
+    border-radius: 10px;
+  }
+
+  .hamburger {
+    display: none;
+  }
+  /* <--------------------------------min screen------------------------> */
+  @media screen and (max-width: 800px) {
+    .hamburger {
+      display: block;
+      position: sticky;
+      top:0
+    }
+
+    .stickyNavbar{
+      display: none;
+    }
+}
